<resources>
    <string name="app_name">TracKids</string>
    <string name="facebook_app_id">678681182316135</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="inicio">Inicio</string>
    <string name="hijo">Hijo</string>
    <string name="hijos">Hijos</string>
    <string name="padre">Padre</string>
    <string name="ubicar">Localizar</string>
    <string name="ultimaubicacion">Ultima ubicacion guardada</string>
    <string name="ver">Ver</string>
    <string name="editar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="agregar">Agregar</string>
    <string name="rutadiaria">Ruta del dia</string>
    <string name="mostrar">Mostrar</string>
    <string name="salir">Salir</string>
    <string name="volver">Volver</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="verlista">Ver lista</string>
    <string name="saliendo">Presione nuevamente para salir</string>
    <string name="addhijo">Agregar hijo</string>
    <string name="addpadre">Agregar padre</string>
    <string name="miubicacion">Mi ubicacion</string>
    <string name="generarclavepadre">Generar clave Padre</string>
    <string name="generarclavehijo">Generar clave Hijo</string>
    <string name="ingresarclavepadre">Ingresar clave Padre</string>
    <string name="ingresarclavehijo">Ingresar clave Hijo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="misubicaciones">Mis ubicaciones</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="contra">Contraseña</string>
    <string name="contra2">Repetir contraseña</string>
    <string name="telefono">Número telefónico</string>
    <string name="registro">Registro</string>
    <string name="ajustes">Ajustes</string>
    <string name="misdatos">Mis datos</string>
    <string name="pin">Pin</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="usuario">Usuario</string>
    <string name="subtitulo">You know, for tracking kids.</string>
    <string name="mimapa">Mi mapa</string>

    <string-array name="opciones">
        <item>Ubicación actual</item>
        <item>Última ruta conocida</item>
        <item>Ruta de hoy</item>
        <item>Ruta de fecha</item>

    </string-array>
</resources>
