<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/miubicacion" />
        <item
            android:id="@+id/nav_hijos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hijos" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/salir" />
        <item
            android:id="@+id/nav_clavepadre"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/generarclavepadre" />
        <item
            android:id="@+id/nav_clavehijo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/generarclavehijo" />
        <item
            android:id="@+id/nav_agregarpadre"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/addpadre" />
        <item
            android:id="@+id/nav_agregarhijo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/addhijo" />
    </group>

</menu>
