<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elyo.my.trackids.Registro">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnFinalizarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:clickable="true"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:layout_alignBottom="@+id/btnVolverASesion"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnVolverASesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/editNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombres"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editContra1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contra"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editContra2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contra2"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/editPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pin"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
